--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 .env
 *.sqlite
+./clean.sh
+
+./src/utils/__pycache__/
+./src/shared/__pycache__/
+./src/features/record/presentation/__pycache__/
+./src/features/book/domain/repositories/__pycache__/
+./src/features/book/domain/models/__pycache__/
+./src/features/book/domain/usecases/__pycache__/
+./src/features/book/presentation/__pycache__/
+./src/features/book/data/repository/__pycache__/
+./src/features/book/data/sources/__pycache__/
+./src/features/book/data/sources/local/__pycache__/
+./src/features/admin/domain/models/__pycache__/
+./src/features/admin/presentation/__pycache__/
+./src/features/student/domain/repository/__pycache__/
+./src/features/student/domain/models/__pycache__/
+./src/features/student/domain/usecases/__pycache__/
+./src/features/student/presentation/__pycache__/
+./src/features/student/data/repositories/__pycache__/
+./src/features/student/data/sources/__pycache__/
+./src/features/student/data/sources/local/__pycache__/
+./__pycache__/
+ 
